--- a/sass/components/_layout.scss
+++ b/sass/components/_layout.scss
@@ -11,6 +11,9 @@
   }
 
   .content-main {
+    margin-left: 0;
+    margin-right: 0;
+
     @include media($desktop) {
       @include span-columns(8 of 16);
     }
